--- a/src/app/pages/shop-all/shop-all.component.html
+++ b/src/app/pages/shop-all/shop-all.component.html
@@ -347,15 +347,25 @@
       <h4 class="text-center">Necklaces</h4>
       <div class="row">
         <div class="col-2">
-          <div class="mbt">
-            <a href="#">
-              <img src="./assets/img/shop-all/neck-all1.png">
-            </a>
+          <div class="card-prd mbt">
+            <div class="img">
+              <a href="#">
+                <img src="./assets/img/shop-all/neck-all1.png">
+              </a>
+            </div>
+            <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+              Quick view
+            </div>
           </div>
-          <div>
-            <a href="#">
-              <img src="./assets/img/shop-all/neck-all2.png">
-            </a>
+          <div class="card-prd mbt">
+            <div class="img">
+              <a href="#">
+                <img src="./assets/img/shop-all/neck-all2.png">
+              </a>
+            </div>
+            <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+              Quick view
+            </div>
           </div>
         </div>
         <div class="col-4">
@@ -364,27 +374,47 @@
           </a>
         </div>
         <div class="col-2">
-          <div class="mbt">
-            <a href="#">
-              <img src="./assets/img/shop-all/neck-all4.png">
-            </a>
+          <div class="card-prd mbt">
+            <div class="img">
+              <a href="#">
+                <img src="./assets/img/shop-all/neck-all4.png">
+              </a>
+            </div>
+            <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+              Quick view
+            </div>
           </div>
-          <div>
-            <a href="#">
-              <img src="./assets/img/shop-all/neck-all5.png">
-            </a>
+          <div class="card-prd mbt">
+            <div class="img">
+              <a href="#">
+                <img src="./assets/img/shop-all/neck-all5.png">
+              </a>
+            </div>
+            <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+              Quick view
+            </div>
           </div>
         </div>
         <div class="col-2">
-          <div class="mbt">
-            <a href="#">
-              <img src="./assets/img/shop-all/neck-all6.png">
-            </a>
+          <div class="card-prd mbt">
+            <div class="img">
+              <a href="#">
+                <img src="./assets/img/shop-all/neck-all6.png">
+              </a>
+            </div>
+            <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+              Quick view
+            </div>
           </div>
-          <div>
-            <a href="#">
-              <img src="./assets/img/shop-all/neck-all7.png">
-            </a>
+          <div class="card-prd mbt">
+            <div class="img">
+              <a href="#">
+                <img src="./assets/img/shop-all/neck-all7.png">
+              </a>
+            </div>
+            <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+              Quick view
+            </div>
           </div>
         </div>
         <div class="col-2">
@@ -395,10 +425,15 @@
               </a>
             </div>
           </div>
-          <div>
-            <a href="#">
-              <img src="./assets/img/shop-all/neck-all8.png">
-            </a>
+          <div class="card-prd mbt">
+            <div class="img">
+              <a href="#">
+                <img src="./assets/img/shop-all/neck-all8.png">
+              </a>
+            </div>
+            <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+              Quick view
+            </div>
           </div>
         </div>
       </div>
