--- a/src/app/pages/category/category.component.html
+++ b/src/app/pages/category/category.component.html
@@ -109,14 +109,14 @@
     <!--category-main-->
     <div class="category-main col-10">
 
-      <!--api-test-start-->
+<!--api-test-start-->
       <div class="row cate-product">
-        <div class="col-3 card" *ngFor="let i of data">
+        <div class="col-3 card" *ngFor="let item of data">
           <div class="item-card-info">
             <div class="card-prd">
               <div class="img">
                 <a routerLink="/product-detail">
-                  <img src="{{i.thumb}}">
+                  <img src="{{item.thumb}}">
                 </a>
               </div>
               <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
@@ -138,23 +138,23 @@
                           </div>
                           <div class="carousel-inner">
                             <div class="carousel-item active">
-                              <img src="./assets/img/product-detail/quickview1.png">
+                              <img src="#">
                             </div>
                             <div class="carousel-item">
-                              <img src="./assets/img/product-detail/quickview2.png">
+                              <img src="#">
                             </div>
                             <div class="carousel-item">
-                              <img src="./assets/img/product-detail/quickview3.png">
+                              <img src="#">
                             </div>
                             <div class="carousel-item">
-                              <img src="./assets/img/product-detail/quickview4.png">
+                              <img src="#">
                             </div>
                           </div>
                         </div>
                       </div>
                       <div class="col-5 pe-0">
-                        <h5>Diamond Wire Ring</h5>
-                        <h5 class="my-3">$7,000</h5>
+                        <h5>{{item.name}}</h5>
+                        <h5 class="my-3">${{item.price}}</h5>
                         <p>Quantity</p>
                         <div class="quick-size my-3">
                           <select class="form-select smt">
@@ -168,7 +168,7 @@
                           </select>
                         </div>
                         <button type="button" class="btn btn-pri mb-3" data-bs-dismiss="modal">Add to bag</button>
-                        <a href="">
+                        <a routerLink="#">
                           <p>View more detail</p>
                         </a>
                       </div>
@@ -178,13 +178,13 @@
               </div>
             </div>
             <div class="item-inf text-center mt-3">
-              <p class="mdt mb-3">{{i.name}}</p>
-              <p class="smt item-price">${{i.price}}</p>
+              <p class="mdt mb-3">{{item.name}}</p>
+              <p class="smt item-price">${{item.price}}</p>
             </div>
           </div>
         </div>
       </div>
-      <!--api-test-end-->
+<!--api-test-end-->
 
       <div class="row cate-product">
         <div class="col-3 card">
