--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -18,11 +18,11 @@
     </div>
   </div>
   <!--introduction-->
-  <div class="intro-img row mbt-120">
-      <div class="col-12">
+  <div class="banner-img mbt-120">
+      <div class="">
         <img src="./assets/img/about-us/1.png" />
       </div>
-      <div class="intro-img-text text-center">
+      <div class="banner-img-text text-center">
         <h5>AGURI BRAND</h5>
         <h2>&</h2>
         <h4>PASCAL IMITATION JEWELLERY</h4>
