--- a/src/app/pages/guide/guide.component.css
+++ b/src/app/pages/guide/guide.component.css
@@ -1,28 +1,39 @@
 /*insurance*/
-.insurance {
+.insurance{
   background-color: #e7e7e7;
-  padding: 50px 0 100px 0;
-  margin-bottom: 80px;
+  padding-top:60px;
+  padding-bottom:60px;
 }
-
-.insurance p {
-  margin-bottom: 50px;
+/*JEWELLERY TYPE*/
+.content{
+  position:relative;
 }
-
-.insurance .btn {
-  width: 30%;
-  padding: 12.5px;
+.content-inner{
+  position:absolute;
+  top:50%;
+  transform: translateY(-50%);
 }
-
-.insurance .btn:hover {
-  background-color: #000;
-  color: #fff;
+.natural-d{
+  padding-right:25px;
 }
-/**/
-
 /*jewellery-care*/
 .jewellery-care li {
   list-style-type: disc;
   margin-inline-start: 20px;
 }
-/**/
+/*Jewellery Carat*/
+.collapse-content{
+  padding-top:40px;
+  padding-bottom:40px;
+}
+.carat-tb{
+  padding-right: 40px;
+  padding-left: 40px;
+  background-color:#e7e7e7;
+}
+
+/*collapse*/
+.card{
+  background-color:#faf8f6;
+  border:none;
+}
