--- a/src/app/pages/category/category.component.html
+++ b/src/app/pages/category/category.component.html
@@ -60,7 +60,7 @@
         <div class="mb-3">
           <p class="font-weight-bolder">Collection</p>
           <input type="checkbox" class="check-box" id="collection-1" name="collection-1" value="Sping Collection">
-          <label for="collection-1">Sping Collection</label><br>
+          <label for="collection-1">Spring Collection</label><br>
           <input type="checkbox" class="check-box" id="collection-2" name="collection-2" value="Aguri Minimalism">
           <label for="collection-2">Minimalism</label><br>
           <input type="checkbox" class="check-box" id="collection-3" name="collection-3" value="Aguri's Eternity Magic">
