--- a/src/app/pages/guide/guide.component.html
+++ b/src/app/pages/guide/guide.component.html
@@ -73,17 +73,6 @@
       <div class="col"></div>
     </div>
     <div>
-      <!--Jewellery Certification-->
-      <div class="certification-collapse">
-        <a data-bs-toggle="collapse" href="#caratcollapse1" role="button" aria-expanded="false" aria-controls="caratcollapse1">
-          <h5 class="text-center">Jewellery Certification</h5>
-        </a>
-        <div class="collapse multi-collapse" id="caratcollapse1">
-          <div class="card card-body">
-            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-          </div>
-        </div>
-      </div>
       <div class="line my-3"></div>
       <!--Jewellery Carat-->
       <div class="carat-collapse">
@@ -91,10 +80,10 @@
           <h5 class="text-center">Jewellery Carat</h5>
         </a>
         <div class="collapse multi-collapse" id="caratcollapse2">
-          <div class="card card-body my-5">
+          <div class="card card-body my-5 px-0 py-0">
             <div class="row">
-              <div class="col-6 collapse-content">
-                <h6 class="text-center mb-3">DIAMOND CARAT GRADING</h6>
+              <div class="col-6 diamond-granding">
+                <h6 class="text-center mb-4">DIAMOND CARAT GRADING</h6>
                 <p>Diamond carat (ct) refers to a diamond’s weight. The most common and popular diamonds in the jewelry
                   industry range up to 1 carat. Prices increase exponentially as the diamond's weight increases, as larger
                   diamond crystals over 1 carat are more difficult to find.</p>
@@ -102,7 +91,7 @@
                   is cut following similar ratios. This allows them to estimate the diamond's diameter based on its carat weight.
                   Though this is still an approximation, it can help you identify the best carat weight for your desired size.</p>
               </div>
-              <div class="col-6 carat-tb collapse-content">
+              <div class="col-6 carat-tb">
                 <div>
                   <h6 class="text-center mb-3">DIAMOND CARAT SIZE CHART</h6>
                   <p class="text-center smt">Below is a list of diamond carat weights and their approximate diameters to help determine the carat
@@ -131,14 +120,14 @@
                     <p class="smt">4mm</p>
                   </div>
                 </div>
-                <div class="line mt-3"></div>
-                <p class="text-center mdt">Need a millimeter ruler? We’ll send you one.</p>
+                <div class="line my-3"></div>
+                <p class="text-center mdt mt-3">Need a millimeter ruler? We’ll send you one.</p>
                 <div class="row">
-                  <div class="col-2"></div>
-                  <div class="col-8">
+                  <div class="col-3"></div>
+                  <div class="col-6">
                     <button class="btn btn-sec">Contact Us</button>
                   </div>
-                  <div class="col-2"></div>
+                  <div class="col-3"></div>
                 </div>
               </div>
             </div>
@@ -152,8 +141,22 @@
           <h5 class="text-center">Jewellery Color</h5>
         </a>
         <div class="collapse multi-collapse" id="caratcollapse3">
-          <div class="card card-body">
-            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+          <div class="card card-body my-5 px-0 py-0">
+            <div class="row">
+              <div class="col-6 color-left">
+                <h6 class="text-center mb-4">DIAMOND COLOR GRADING</h6>
+                <p>Gemological institutes grade white diamonds based on the absence of color. Though diamonds are primarily
+                  carbon, they often include trace elements that can affect their color. The most common trace element is
+                  nitrogen, which gives off a subtle shade of yellow. The richer the yellow hue, the more common the diamond crystal, which decreases their value.</p>
+                <p>To grade white diamond color, gemological institutes use letters of the alphabet, starting from D
+                  (colorless) all the way to Z (light yellow). Truly colorless diamonds are quite rare, therefore are
+                  the most expensive. However, you should note that subtle hints of color are difficult to spot outside
+                  of a laboratory environment. The most common color ranges are D through F and G through J.</p>
+              </div>
+              <div class="col-6">
+                <img src="./assets/img/guide/color.png"/>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -181,6 +184,7 @@
           </div>
         </div>
       </div>
+      <div class="line mt-3"></div>
     </div>
   </div>
   <!--jewellery-insurance-->
@@ -199,29 +203,31 @@
   </div>
 </div>
 <!--jewellery-care-->
-<div class="container jewel-care">
+<div class="container jewel-care mbt-120">
   <div class="row pbt-100">
-    <div class="col-4">
-      <h4 class="mb-3">Jewellery Care</h4>
-      <p class="smt">Even though all plated jewellery tends to loose a little bit of the plating and colour over time,
-        there are a few things you can do to make it last longer and keep its shine.</p>
+    <div class="col-5">
+      <div class="mb-5">
+        <h4 class="mb-3">Jewellery Care</h4>
+        <p class="smt">Even though all plated jewellery tends to loose a little bit of the plating and colour over time,
+          there are a few things you can do to make it last longer and keep its shine.</p>
+      </div>
       <img src="./assets/img/guide/4.png" />
     </div>
-    <div class="col-1"></div>
+
     <div class="col-7 jewellery-care">
       <img src="./assets/img/guide/5.png"/>
       <p class="mtp">Jewellery: Gold plated over sterling silver or brass</p>
       <ul>
-        <li>Keep your jewellery dry. Don't do laundry or wash dishes with it on.</li>
-        <li>Don't wear it in pool, at the spa or in a seawater.</li>
-        <li>Take it off before working out.</li>
-        <li>Keep it away from body chemistry: your perfume, lotion, hand cream etc...</li>
-        <li>Don't use jewellery cleaner to clean it. it is too harsh, regular wipe with a soft cloth its all you need.</li>
-        <li>Keep it in our AGURI pouch and a box in a dry and clean environment when you don't wear it.</li>
+        <li class="smt">Keep your jewellery dry. Don't do laundry or wash dishes with it on.</li>
+        <li class="smt">Don't wear it in pool, at the spa or in a seawater.</li>
+        <li class="smt">Take it off before working out.</li>
+        <li class="smt">Keep it away from body chemistry: your perfume, lotion, hand cream etc...</li>
+        <li class="smt">Don't use jewellery cleaner to clean it. it is too harsh, regular wipe with a soft cloth its all you need.</li>
+        <li class="smt">Keep it in our AGURI pouch and a box in a dry and clean environment when you don't wear it.</li>
       </ul>
-      <p class="mtp">Jewellery: Gold plated over stainless steel</p>
+      <p class="mt-3">Jewelry: Gold plated over stainless steel</p>
       <ul>
-        <li>Jewellery is waterproof but please keep it away from harsh or sharp objects to avoid scratching.</li>
+        <li class="smt">Jewellery is waterproof but please keep it away from harsh or sharp objects to avoid scratching.</li>
       </ul>
     </div>
   </div>
@@ -237,22 +243,6 @@
     <div class="col-1"></div>
   </div>
 
-<!--Banner-->
 
-<div class="row pbt-100">
-  <div class="col-12 mbt text-center">
-    <h3 class="mbt">Jewellery Guide</h3>
-    <h5>Welcome to our jewellery guide. Rare, precious, and everlasting, jewellery are fascinating gemological
-      curiosities with a rich history.</h5>
-  </div>
-</div>
 
-  <div class="col-6 mtp">
-    <p>At AGURI, we offer earth-created and lab-grown diamonds. Both types are the same gemstone with identical
-      physical, chemical, and optical properties, differing only in origin. On this page, you will find information
-      about how both form and their four key characteristics—carat weight, color, clarity, and cut—that all signify
-      value. With this knowledge, you’ll be able to select the diamond that suits you best with confidence and ease.</p>
-  </div>
-<div class="mtp mbt px-0">
-  <img src="./assets/img/guide/1.png" />
-</div>
+
