--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,7 +40,7 @@
       <li class="nav-item"><a class="nav-link" routerLink="/">Home</a></li>
       <!--dropdown-menu-start-->
       <li class="nav-item dropdown">
-        <a class="nav-link dropbtn" routerLink="/shop-all">Shop All <i class="fa fa-chevron-circle-down"></i></a>
+        <a class="nav-link dropbtn" routerLink="/shop-all">Shop All <i class="fa-solid fa-chevron-down"></i></a>
         <div class="dropdown-content mt-2">
           <div class="row">
             <div class="col-3">
