--- a/src/app/pages/category/category.component.html
+++ b/src/app/pages/category/category.component.html
@@ -253,8 +253,8 @@
                 </div>
               </div>
             </div>
-            <div class="item-inf text-center mt-5">
-              <p class="mdt mb-3">Lynn Ring</p>
+            <div class="item-inf text-center mt-3">
+              <p class="mdt mb-2">Lynn Ring</p>
               <p class="smt item-price">$7,000</p>
             </div>
           </div>
@@ -271,8 +271,8 @@
                 Quick view
               </div>
             </div>
-            <div class="item-inf text-center mt-5">
-              <p class="mdt mb-3">Lynn Ring</p>
+            <div class="item-inf text-center mt-3">
+              <p class="mdt mb-2">Lynn Ring</p>
               <p class="smt item-price">$7,000</p>
             </div>
           </div>
@@ -289,8 +289,8 @@
                 Quick view
               </div>
             </div>
-            <div class="item-inf text-center mt-5">
-              <p class="mdt mb-3">Lynn Ring</p>
+            <div class="item-inf text-center mt-3">
+              <p class="mdt mb-2">Lynn Ring</p>
               <p class="smt item-price">$7,000</p>
             </div>
           </div>
@@ -307,8 +307,8 @@
                 Quick view
               </div>
             </div>
-            <div class="item-inf text-center mt-5">
-              <p class="mdt mb-3">Lynn Ring</p>
+            <div class="item-inf text-center mt-3">
+              <p class="mdt mb-2">Lynn Ring</p>
               <p class="smt item-price">$7,000</p>
             </div>
           </div>
@@ -327,8 +327,8 @@
                 Quick view
               </div>
             </div>
-            <div class="item-inf text-center mt-5">
-              <p class="mdt mb-3">Lynn Ring</p>
+            <div class="item-inf text-center mt-3">
+              <p class="mdt mb-2">Lynn Ring</p>
               <p class="smt">$7,000</p>
             </div>
           </div>
@@ -345,8 +345,8 @@
                 Quick view
               </div>
             </div>
-            <div class="item-inf text-center mt-5">
-              <p class="mdt mb-3">Lynn Ring</p>
+            <div class="item-inf text-center mt-3">
+              <p class="mdt mb-2">Lynn Ring</p>
               <p class="smt item-price">$7,000</p>
             </div>
           </div>
@@ -363,8 +363,8 @@
                 Quick view
               </div>
             </div>
-            <div class="item-inf text-center mt-5">
-              <p class="mdt mb-3">Lynn Ring</p>
+            <div class="item-inf text-center mt-3">
+              <p class="mdt mb-2">Lynn Ring</p>
               <p class="smt item-price">$7,000</p>
             </div>
           </div>
@@ -381,8 +381,8 @@
                 Quick view
               </div>
             </div>
-            <div class="item-inf text-center mt-5">
-              <p class="mdt mb-3">Lynn Ring</p>
+            <div class="item-inf text-center mt-3">
+              <p class="mdt mb-2">Lynn Ring</p>
               <p class="smt item-price">$7,000</p>
             </div>
           </div>
@@ -415,8 +415,8 @@
                 Quick view
               </div>
             </div>
-            <div class="item-inf text-center mt-5">
-              <p class="mdt mb-3">Lynn Ring</p>
+            <div class="item-inf text-center mt-3">
+              <p class="mdt mb-2">Lynn Ring</p>
               <p class="smt mb-0">$7,000</p>
             </div>
           </div>
@@ -433,8 +433,8 @@
                 Quick view
               </div>
             </div>
-            <div class="item-inf text-center mt-5">
-              <p class="mdt mb-3">Lynn Ring</p>
+            <div class="item-inf text-center mt-3">
+              <p class="mdt mb-2">Lynn Ring</p>
               <p class="smt mb-0">$7,000</p>
             </div>
           </div>
@@ -454,8 +454,8 @@
                 Quick view
               </div>
             </div>
-            <div class="item-inf text-center mt-5">
-              <p class="mdt mb-3">Lynn Ring</p>
+            <div class="item-inf text-center mt-3">
+              <p class="mdt mb-2">Lynn Ring</p>
               <p class="smt item-price">$7,000</p>
             </div>
           </div>
@@ -472,8 +472,8 @@
                 Quick view
               </div>
             </div>
-            <div class="item-inf text-center mt-5">
-              <p class="mdt mb-3">Lynn Ring</p>
+            <div class="item-inf text-center mt-3">
+              <p class="mdt mb-2">Lynn Ring</p>
               <p class="smt item-price">$7,000</p>
             </div>
           </div>
@@ -490,8 +490,8 @@
                 Quick view
               </div>
             </div>
-            <div class="item-inf text-center mt-5">
-              <p class="mdt mb-3">Lynn Ring</p>
+            <div class="item-inf text-center mt-3">
+              <p class="mdt mb-2">Lynn Ring</p>
               <p class="smt item-price">$7,000</p>
             </div>
           </div>
@@ -508,82 +508,8 @@
                 Quick view
               </div>
             </div>
-            <div class="item-inf text-center mt-5">
-              <p class="mdt mb-3">Lynn Ring</p>
-              <p class="smt item-price">$7,000</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row cate-product">
-        <div class="col-3">
-          <div class="item-card-info">
-            <div class="card-prd">
-              <div class="img">
-                <a routerLink="/product-detail">
-                  <img src="./assets/img/rings/eternity/1.1.1.png">
-                </a>
-              </div>
-              <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
-                Quick view
-              </div>
-            </div>
-            <div class="item-inf text-center mt-5">
-              <p class="mdt mb-3">Lynn Ring</p>
-              <p class="smt item-price">$7,000</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-3">
-          <div class="item-card-info">
-            <div class="card-prd">
-              <div class="img">
-                <a routerLink="/product-detail">
-                  <img src="./assets/img/rings/eternity/1.1.1.png">
-                </a>
-              </div>
-              <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
-                Quick view
-              </div>
-            </div>
-            <div class="item-inf text-center mt-5">
-              <p class="mdt mb-3">Lynn Ring</p>
-              <p class="smt item-price">$7,000</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-3">
-          <div class="item-card-info">
-            <div class="card-prd">
-              <div class="img">
-                <a routerLink="/product-detail">
-                  <img src="./assets/img/rings/eternity/1.1.1.png">
-                </a>
-              </div>
-              <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
-                Quick view
-              </div>
-            </div>
-            <div class="item-inf text-center mt-5">
-              <p class="mdt mb-3">Lynn Ring</p>
-              <p class="smt item-price">$7,000</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-3">
-          <div class="item-card-info">
-            <div class="card-prd">
-              <div class="img">
-                <a routerLink="/product-detail">
-                  <img src="./assets/img/rings/eternity/1.1.1.png">
-                </a>
-              </div>
-              <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
-                Quick view
-              </div>
-            </div>
-            <div class="item-inf text-center mt-5">
-              <p class="mdt mb-3">Lynn Ring</p>
+            <div class="item-inf text-center mt-3">
+              <p class="mdt mb-2">Lynn Ring</p>
               <p class="smt item-price">$7,000</p>
             </div>
           </div>
@@ -602,8 +528,82 @@
                 Quick view
               </div>
             </div>
-            <div class="item-inf text-center mt-5">
-              <p class="mdt mb-3">Lynn Ring</p>
+            <div class="item-inf text-center mt-3">
+              <p class="mdt mb-2">Lynn Ring</p>
+              <p class="smt item-price">$7,000</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="item-card-info">
+            <div class="card-prd">
+              <div class="img">
+                <a routerLink="/product-detail">
+                  <img src="./assets/img/rings/eternity/1.1.1.png">
+                </a>
+              </div>
+              <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+                Quick view
+              </div>
+            </div>
+            <div class="item-inf text-center mt-3">
+              <p class="mdt mb-2">Lynn Ring</p>
+              <p class="smt item-price">$7,000</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="item-card-info">
+            <div class="card-prd">
+              <div class="img">
+                <a routerLink="/product-detail">
+                  <img src="./assets/img/rings/eternity/1.1.1.png">
+                </a>
+              </div>
+              <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+                Quick view
+              </div>
+            </div>
+            <div class="item-inf text-center mt-3">
+              <p class="mdt mb-2">Lynn Ring</p>
+              <p class="smt item-price">$7,000</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="item-card-info">
+            <div class="card-prd">
+              <div class="img">
+                <a routerLink="/product-detail">
+                  <img src="./assets/img/rings/eternity/1.1.1.png">
+                </a>
+              </div>
+              <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+                Quick view
+              </div>
+            </div>
+            <div class="item-inf text-center mt-3">
+              <p class="mdt mb-2">Lynn Ring</p>
+              <p class="smt item-price">$7,000</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-3">
+          <div class="item-card-info">
+            <div class="card-prd">
+              <div class="img">
+                <a routerLink="/product-detail">
+                  <img src="./assets/img/rings/eternity/1.1.1.png">
+                </a>
+              </div>
+              <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+                Quick view
+              </div>
+            </div>
+            <div class="item-inf text-center mt-3">
+              <p class="mdt mb-2">Lynn Ring</p>
               <p class="smt">$7,000</p>
             </div>
           </div>
@@ -620,8 +620,8 @@
                 Quick view
               </div>
             </div>
-            <div class="item-inf text-center mt-5">
-              <p class="mdt mb-3">Lynn Ring</p>
+            <div class="item-inf text-center mt-3">
+              <p class="mdt mb-2">Lynn Ring</p>
               <p class="smt">$7,000</p>
             </div>
           </div>
@@ -638,8 +638,8 @@
                 Quick view
               </div>
             </div>
-            <div class="item-inf text-center mt-5">
-              <p class="mdt mb-3">Lynn Ring</p>
+            <div class="item-inf text-center mt-3">
+              <p class="mdt mb-2">Lynn Ring</p>
               <p class="smt">$7,000</p>
             </div>
           </div>
@@ -656,19 +656,20 @@
                 Quick view
               </div>
             </div>
-            <div class="item-inf text-center mt-5">
-              <p class="mdt mb-3">Lynn Ring</p>
+            <div class="item-inf text-center mt-3">
+              <p class="mdt mb-2">Lynn Ring</p>
               <p class="smt">$7,000</p>
             </div>
           </div>
         </div>
       </div>
-
       <!--category-bottom-->
       <div class="category-bottom pb-5 text-center">
-        <p>Showing 60 of 180</p>
+        <p class="smt mb-2">Showing 60 of 180</p>
         <button class="btn-more">View more</button>
-        <p class="mt-3 back-to-top">Back to top <i class="fa fa-chevron-circle-up fa-xl"></i></p>
+        <div class="d-flex">
+          <a class="mx-auto back-to-top smt">Back to top <i class="ps-3 fa-solid fa-chevron-up"></i></a>
+        </div>
       </div>
     </div>
   </div>
