--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,30 +1,64 @@
-#no-1{
-  position: absolute;
-  width: 295px;
-  height: 391px;
-  left: 0px;
-  top: 710px;
+/*New Arrivals*/
+
+/*All Jewelery*/
+.item-box-all{
+  position:relative;
+  overflow: hidden;
 }
-#no-2{
-  position: absolute;
-  width: 295px;
-  height: 391px;
-  left: 325px;
-  top: 710px;
+.item-box-content{
+  position:absolute;
+  top:50%;
+  transform: translateY(-50%);
+  width:100%;
+  display:none;
 }
-#no-3{
-  position: absolute;
-  width: 620px;
-  height: 820px;
-  left: 813px;
-  top: 536px;
+.item-box-all:hover > .item-box-content{
+  display:block;
+  transition: 0.4s all;
 }
-#no-4{
-  position: absolute;
-  width: 295px;
-  height: 391px;
-  left: 1788px;
-  top: 710px;
+.item-box-all:hover > .item-box-img{
+  transform:scale(108%);
+  filter:brightness(70%);
+  transition:0.4s all;
+}
+.item-box-content a{
+  color:#fff;
+}
+.item-box-content a:hover{
+  color:#fff;
+  text-decoration: underline;
+}
+.bottom-content{
+  position:relative;
+}
+.bottom-content-inner{
+  position:absolute;
+  bottom:0px;
+  left:0px;
+}
+/*Best seller*/
+.best-seller{
+  background-color: #fff;
+  padding-top:60px;
+  padding-bottom:60px;
+}
+/*New Collection*/
+.new-collection-bottom{
+  display:flex;
+  padding-top:40px;
+}
+.new-collection-content{
+  margin:auto;
+  padding: 0px 40px;
+}
+.feature-img2 img{
+  padding-top:210px;
+}
+/*experiences*/
+.experiences{
+  background-color: #fff;
+  padding-top:60px;
+  padding-bottom:60px;
 }
 
 
