--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="home.component.css">
 <div class="container">
   <!--New Arrivals-->
   <div class="simi-prod mbt-120">
@@ -176,249 +177,250 @@
   </div>
 </div>
 <!--BEST SELLERS-->
-<div class="also-like best-seller mbt-120">
-  <h5 class="text-center">Best Sellers</h5>
-  <div id="carouselalsolike" class="carousel slide carousel-dark carousel-also" data-bs-ride="carousel">
-    <div class="carousel-inner container">
-      <div class="carousel-item active" data-bs-interval="6000">
-        <div class="row">
-          <div class="col-3">
-            <div class="item-card-info">
-              <div class="card-prd">
-                <div class="img">
-                  <a href="#">
-                    <img src="./assets/img/product-detail/also-like1.png">
-                  </a>
+<div class="also-like mbt-120">
+  <div class="best-seller">
+    <h5 class="text-center">Best Sellers</h5>
+    <div id="carouselalsolike" class="carousel slide carousel-dark carousel-also mb-0" data-bs-ride="carousel">
+      <div class="carousel-inner container">
+        <div class="carousel-item active" data-bs-interval="6000">
+          <div class="row">
+            <div class="col-3">
+              <div class="item-card-info">
+                <div class="card-prd">
+                  <div class="img">
+                    <a href="#">
+                      <img src="./assets/img/product-detail/also-like1.png">
+                    </a>
+                  </div>
+                  <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+                    Quick view
+                  </div>
                 </div>
-                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
-                  Quick view
+                <div class="item-inf text-center mt-3">
+                  <p class="mdt mb-2">Lynn Ring</p>
+                  <p>$7,000</p>
                 </div>
               </div>
-              <div class="item-inf text-center mt-3">
-                <p class="mdt mb-2">Lynn Ring</p>
-                <p>$7,000</p>
+            </div>
+            <div class="col-3">
+              <div class="item-card-info">
+                <div class="card-prd">
+                  <div class="img">
+                    <a href="#">
+                      <img src="./assets/img/product-detail/also-like2.png">
+                    </a>
+                  </div>
+                  <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+                    Quick view
+                  </div>
+                </div>
+                <div class="item-inf text-center mt-3">
+                  <p class="mdt mb-2">Lynn Ring</p>
+                  <p>$7,000</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-3">
+              <div class="item-card-info">
+                <div class="card-prd">
+                  <div class="img">
+                    <a href="#">
+                      <img src="./assets/img/product-detail/also-like3.png">
+                    </a>
+                  </div>
+                  <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+                    Quick view
+                  </div>
+                </div>
+                <div class="item-inf text-center mt-3">
+                  <p class="mdt mb-2">Lynn Ring</p>
+                  <p>$7,000</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-3">
+              <div class="item-card-info">
+                <div class="card-prd">
+                  <div class="img">
+                    <a href="#">
+                      <img src="./assets/img/product-detail/also-like4.png">
+                    </a>
+                  </div>
+                  <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+                    Quick view
+                  </div>
+                </div>
+                <div class="item-inf text-center mt-3">
+                  <p class="mdt mb-2">Lynn Ring</p>
+                  <p>$7,000</p>
+                </div>
               </div>
             </div>
           </div>
-          <div class="col-3">
-            <div class="item-card-info">
-              <div class="card-prd">
-                <div class="img">
-                  <a href="#">
-                    <img src="./assets/img/product-detail/also-like2.png">
-                  </a>
+        </div>
+        <div class="carousel-item" data-bs-interval="5000">
+          <div class="row">
+            <div class="col-3">
+              <div class="item-card-info">
+                <div class="card-prd">
+                  <div class="img">
+                    <a href="#">
+                      <img src="./assets/img/product-detail/also-like5.png">
+                    </a>
+                  </div>
+                  <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+                    Quick view
+                  </div>
                 </div>
-                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
-                  Quick view
+                <div class="item-inf text-center mt-3">
+                  <p class="mdt mb-2">Lynn Ring</p>
+                  <p>$7,000</p>
                 </div>
               </div>
-              <div class="item-inf text-center mt-3">
-                <p class="mdt mb-2">Lynn Ring</p>
-                <p>$7,000</p>
+            </div>
+            <div class="col-3">
+              <div class="item-card-info">
+                <div class="card-prd">
+                  <div class="img">
+                    <a href="#">
+                      <img src="./assets/img/product-detail/also-like6.png">
+                    </a>
+                  </div>
+                  <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+                    Quick view
+                  </div>
+                </div>
+                <div class="item-inf text-center mt-3">
+                  <p class="mdt mb-2">Lynn Ring</p>
+                  <p>$7,000</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-3">
+              <div class="item-card-info">
+                <div class="card-prd">
+                  <div class="img">
+                    <a href="#">
+                      <img src="./assets/img/product-detail/also-like7.png">
+                    </a>
+                  </div>
+                  <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+                    Quick view
+                  </div>
+                </div>
+                <div class="item-inf text-center mt-3">
+                  <p class="mdt mb-2">Lynn Ring</p>
+                  <p>$7,000</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-3">
+              <div class="item-card-info">
+                <div class="card-prd">
+                  <div class="img">
+                    <a href="#">
+                      <img src="./assets/img/product-detail/also-like8.png">
+                    </a>
+                  </div>
+                  <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+                    Quick view
+                  </div>
+                </div>
+                <div class="item-inf text-center mt-3">
+                  <p class="mdt mb-2">Lynn Ring</p>
+                  <p>$7,000</p>
+                </div>
               </div>
             </div>
           </div>
-          <div class="col-3">
-            <div class="item-card-info">
-              <div class="card-prd">
-                <div class="img">
-                  <a href="#">
-                    <img src="./assets/img/product-detail/also-like3.png">
-                  </a>
+        </div>
+        <div class="carousel-item" data-bs-interval="5000">
+          <div class="row">
+            <div class="col-3">
+              <div class="item-card-info">
+                <div class="card-prd">
+                  <div class="img">
+                    <a href="#">
+                      <img src="./assets/img/product-detail/also-like5.png">
+                    </a>
+                  </div>
+                  <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+                    Quick view
+                  </div>
                 </div>
-                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
-                  Quick view
+                <div class="item-inf text-center mt-3">
+                  <p class="mdt mb-2">Lynn Ring</p>
+                  <p>$7,000</p>
                 </div>
-              </div>
-              <div class="item-inf text-center mt-3">
-                <p class="mdt mb-2">Lynn Ring</p>
-                <p>$7,000</p>
               </div>
             </div>
-          </div>
-          <div class="col-3">
-            <div class="item-card-info">
-              <div class="card-prd">
-                <div class="img">
-                  <a href="#">
-                    <img src="./assets/img/product-detail/also-like4.png">
-                  </a>
+            <div class="col-3">
+              <div class="item-card-info">
+                <div class="card-prd">
+                  <div class="img">
+                    <a href="#">
+                      <img src="./assets/img/product-detail/also-like6.png">
+                    </a>
+                  </div>
+                  <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+                    Quick view
+                  </div>
                 </div>
-                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
-                  Quick view
+                <div class="item-inf text-center mt-3">
+                  <p class="mdt mb-2">Lynn Ring</p>
+                  <p>$7,000</p>
                 </div>
               </div>
-              <div class="item-inf text-center mt-3">
-                <p class="mdt mb-2">Lynn Ring</p>
-                <p>$7,000</p>
+            </div>
+            <div class="col-3">
+              <div class="item-card-info">
+                <div class="card-prd">
+                  <div class="img">
+                    <a href="#">
+                      <img src="./assets/img/product-detail/also-like7.png">
+                    </a>
+                  </div>
+                  <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+                    Quick view
+                  </div>
+                </div>
+                <div class="item-inf text-center mt-3">
+                  <p class="mdt mb-2">Lynn Ring</p>
+                  <p>$7,000</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-3">
+              <div class="item-card-info">
+                <div class="card-prd">
+                  <div class="img">
+                    <a href="#">
+                      <img src="./assets/img/product-detail/also-like8.png">
+                    </a>
+                  </div>
+                  <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+                    Quick view
+                  </div>
+                </div>
+                <div class="item-inf text-center mt-3">
+                  <p class="mdt mb-2">Lynn Ring</p>
+                  <p>$7,000</p>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="carousel-item" data-bs-interval="5000">
-        <div class="row">
-          <div class="col-3">
-            <div class="item-card-info">
-              <div class="card-prd">
-                <div class="img">
-                  <a href="#">
-                    <img src="./assets/img/product-detail/also-like5.png">
-                  </a>
-                </div>
-                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
-                  Quick view
-                </div>
-              </div>
-              <div class="item-inf text-center mt-3">
-                <p class="mdt mb-2">Lynn Ring</p>
-                <p>$7,000</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="item-card-info">
-              <div class="card-prd">
-                <div class="img">
-                  <a href="#">
-                    <img src="./assets/img/product-detail/also-like6.png">
-                  </a>
-                </div>
-                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
-                  Quick view
-                </div>
-              </div>
-              <div class="item-inf text-center mt-3">
-                <p class="mdt mb-2">Lynn Ring</p>
-                <p>$7,000</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="item-card-info">
-              <div class="card-prd">
-                <div class="img">
-                  <a href="#">
-                    <img src="./assets/img/product-detail/also-like7.png">
-                  </a>
-                </div>
-                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
-                  Quick view
-                </div>
-              </div>
-              <div class="item-inf text-center mt-3">
-                <p class="mdt mb-2">Lynn Ring</p>
-                <p>$7,000</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="item-card-info">
-              <div class="card-prd">
-                <div class="img">
-                  <a href="#">
-                    <img src="./assets/img/product-detail/also-like8.png">
-                  </a>
-                </div>
-                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
-                  Quick view
-                </div>
-              </div>
-              <div class="item-inf text-center mt-3">
-                <p class="mdt mb-2">Lynn Ring</p>
-                <p>$7,000</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item" data-bs-interval="5000">
-        <div class="row">
-          <div class="col-3">
-            <div class="item-card-info">
-              <div class="card-prd">
-                <div class="img">
-                  <a href="#">
-                    <img src="./assets/img/product-detail/also-like5.png">
-                  </a>
-                </div>
-                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
-                  Quick view
-                </div>
-              </div>
-              <div class="item-inf text-center mt-3">
-                <p class="mdt mb-2">Lynn Ring</p>
-                <p>$7,000</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="item-card-info">
-              <div class="card-prd">
-                <div class="img">
-                  <a href="#">
-                    <img src="./assets/img/product-detail/also-like6.png">
-                  </a>
-                </div>
-                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
-                  Quick view
-                </div>
-              </div>
-              <div class="item-inf text-center mt-3">
-                <p class="mdt mb-2">Lynn Ring</p>
-                <p>$7,000</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="item-card-info">
-              <div class="card-prd">
-                <div class="img">
-                  <a href="#">
-                    <img src="./assets/img/product-detail/also-like7.png">
-                  </a>
-                </div>
-                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
-                  Quick view
-                </div>
-              </div>
-              <div class="item-inf text-center mt-3">
-                <p class="mdt mb-2">Lynn Ring</p>
-                <p>$7,000</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="item-card-info">
-              <div class="card-prd">
-                <div class="img">
-                  <a href="#">
-                    <img src="./assets/img/product-detail/also-like8.png">
-                  </a>
-                </div>
-                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
-                  Quick view
-                </div>
-              </div>
-              <div class="item-inf text-center mt-3">
-                <p class="mdt mb-2">Lynn Ring</p>
-                <p>$7,000</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselalsolike" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselalsolike" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselalsolike" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselalsolike" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
   </div>
-  <button class="btnlg btn-pri btn">Shop now</button>
 </div>
 <!--Modal Quick view-->
 <div class="modal fade" id="quickview">
@@ -483,8 +485,7 @@
 
 
 <!--New collection-->
-<div class="">
-  <div class=" new-collection mbt-120 container">
+<div class=" new-collection mbt-120 container">
     <div class="row">
       <div class="col-5 new-collection-left ps-0">
         <a routerlink="#">
@@ -517,7 +518,6 @@
       </div>
     </div>
   </div>
-</div>
 <!--Users Experiences-->
 <div class="experiences">
   <div class="container">
