--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -146,7 +146,7 @@
           </div>
         </div>
         <div class="bag">
-          <button class="add-bag btn btnlg btn-pri" type="submit" data-bs-toggle="offcanvas" data-bs-target="#addbag">Add to bag</button>
+          <button class="add-bag btn btnlg btn-pri w-100" type="submit" data-bs-toggle="offcanvas" data-bs-target="#addbag">Add to bag</button>
           <!--OFFCANVSS ADD BAG-->
           <div class="offcanvas offcanvas-end" id="addbag">
             <div class="offcanvas-header">
@@ -193,7 +193,7 @@
           </div>
         </div>
         <div class="ask-advisor">
-          <button class="btn btn-sec btnlg" type="button" data-bs-toggle="offcanvas" data-bs-target="#askadvisor">Ask A Client Advisor</button>
+          <button class="btn btn-sec btnlg w-100" type="button" data-bs-toggle="offcanvas" data-bs-target="#askadvisor">Ask A Client Advisor</button>
           <!--OFFCANVSS ASK ADVISOR-->
           <div class="offcanvas offcanvas-end" id="askadvisor">
             <div class="offcanvas-header">
@@ -679,7 +679,7 @@
     </div>
     <div class="col-8"></div>
     <div class="col-2">
-      <button class="advisor btn btnlg btn-pri" data-bs-toggle="modal" type="button" data-bs-target="#review">Write a review</button>
+      <button class="advisor btn btnlg btn-pri w-100" data-bs-toggle="modal" type="button" data-bs-target="#review">Write a review</button>
       <!-- Modal -->
       <div class="modal fade" id="review">
         <div class="modal-dialog modal-dialog-centered">
