--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -325,7 +325,7 @@
               <p class="mdt">Material</p>
               <p class="smt">16k White gold</p>
             </div>
-            <button type="button" class="btn btn-pri btnsm" data-bs-dismiss="modal">Add to bag</button>
+            <button type="button" class="btn btn-pri btnsm w-100" data-bs-dismiss="modal">Add to bag</button>
           </div>
           <div class="col-6 simi-right">
             <div class="itm">
@@ -349,7 +349,7 @@
               <p class="mdt">Material</p>
               <p class="smt">18k Rose gold</p>
             </div>
-            <button type="button" class="btn btn-pri btnsm" data-bs-dismiss="modal">Add to bag</button>
+            <button type="button" class="btn btn-pri btnsm w-100" data-bs-dismiss="modal">Add to bag</button>
           </div>
         </div>
       </div>
@@ -651,7 +651,7 @@
                 <option value="3">5 1/2</option>
               </select>
             </div>
-            <button type="button" class="btn btn-pri mb-3" data-bs-dismiss="modal">Add to bag</button>
+            <button type="button" class="btn btn-pri mb-3 w-100" data-bs-dismiss="modal">Add to bag</button>
             <a href="">
               <p>View more detail</p>
             </a>
